# bencode

./: CMakeLists.txt  LICENSE
include/: Parser.hpp  TokenType.hpp
src/: CMakeLists.txt  Parser.cpp  Token.hpp
tst/: CMakeLists.txt  Parser_test.cpp
tst/gtest/: gtest.cmake
